fix : image container on small screens

--- a/screens/cart/cart.css
+++ b/screens/cart/cart.css
@@ -14,6 +14,7 @@
 .card__media-container {
   width: 15rem;
   background-color: var(--grey-200);
+  border-radius: 5px 0 0 5px;
 }
 .card .card__media {
   border-radius: unset;
@@ -59,10 +60,16 @@
 @media screen and (max-width: 500px) {
   .card__media-container {
     width: 100%;
-  }
-
-  .card .card__media {
+    height: 16rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 5px 5px 0 0;
+  }
+  .card__media {
+    object-fit: contain;
+    height: 80%;
+    width: 70%;
   }
 }
 @media screen and (max-width: 950px) {
